--- a/pom.xml
+++ b/pom.xml
@@ -367,7 +367,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${cobertura.version}</version>
+                <version>2.8</version>
                 <configuration>
                     <check/>
                 </configuration>
